change to /doc
