# index.js
@@ -11,24 +11,61 @@ const apiRoutes = require("./routes/api"); // Importamos el router que creamos
 require('dotenv').config();
 
 
+// Midelware para bloquear ip si intentan muchas peticiones de forma fallida
+const failedAttempts = {}; // Objeto para almacenar el número de intentos fallidos por IP
+const blockedIPs = {}; // Objeto para almacenar las IPs bloqueadas y su tiempo de bloqueo
+
+const MAX_FAILED_ATTEMPTS = 10;
+const BLOCK_DURATION = 60 * 60 * 1000; // 1 hora en milisegundos
+// Chekear si la ip de la cual nos estan haciendo la peticion esta bloqueada
+const checkBlockedIP = (req, res, next) => {
+  const ip = req.ip; // Obtiene la dirección IP del cliente
+
+  if (blockedIPs[ip] && blockedIPs[ip] > Date.now()) {
+      return res.status(429).json({ message: 'Demasiadas peticiones fallidas. Tu IP ha sido bloqueada temporalmente.' });
+  }
+
+  next();
+};
 
 // Middleware de autenticación
 const authenticateToken = (req, res, next) => {
-    const authHeader = req.headers['authorization'];
-    const token = authHeader && authHeader.split(' ')[1]; // Bearer <token>
+  const ip = req.ip;
+  const authHeader = req.headers['authorization'];
+  const token = authHeader && authHeader.split(' ')[1]; // Bearer <token>
 
-    if (token == null) {
-        return res.status(401).json({ message: 'Token no encontrado' });
-    }
+  if (blockedIPs[ip] && blockedIPs[ip] > Date.now()) {
+      return res.status(429).json({ message: 'Demasiadas peticiones fallidas. Tu IP ha sido bloqueada temporalmente.' });
+  }
 
-    // Aquí debes comparar el token con tu clave secreta
-    const secretKey = process.env.SECRET_KEY; // Carga la clave secreta desde las variables de entorno
+  if (token == null) {
+      failedAttempts[ip] = (failedAttempts[ip] || 0) + 1;
+      if (failedAttempts[ip] >= MAX_FAILED_ATTEMPTS) {
+          blockedIPs[ip] = Date.now() + BLOCK_DURATION;
+          delete failedAttempts[ip]; // Limpiamos los intentos fallidos al bloquear
+          // Opcional: Puedes agregar un log aquí para registrar el bloqueo de la IP
+          console.log(`IP bloqueada: ${ip}`);
+          return res.status(429).json({ message: 'Demasiadas peticiones fallidas. Tu IP ha sido bloqueada temporalmente.' });
+      }
+      return res.status(401).json({ message: 'Token no encontrado' });
+  }
 
-    if (token === secretKey) {
-        next(); // El token es válido, permite el acceso a la siguiente middleware o ruta
-    } else {
-        return res.status(403).json({ message: 'Token inválido' }); // 403 Forbidden si el token no coincide
-    }
+  const secretKey = process.env.SECRET_KEY;
+
+  if (token === secretKey) {
+      // Si el token es válido, reinicia los intentos fallidos para esta IP
+      delete failedAttempts[ip];
+      next();
+  } else {
+      failedAttempts[ip] = (failedAttempts[ip] || 0) + 1;
+      if (failedAttempts[ip] >= MAX_FAILED_ATTEMPTS) {
+          blockedIPs[ip] = Date.now() + BLOCK_DURATION;
+          delete failedAttempts[ip];
+          console.log(`IP bloqueada: ${ip}`);
+          return res.status(429).json({ message: 'Demasiadas peticiones fallidas. Tu IP ha sido bloqueada temporalmente.' });
+      }
+      return res.status(403).json({ message: 'Token inválido' });
+  }
 };
 
 
@@ -37,6 +74,10 @@ const authenticateToken = (req, res, next) => {
 initializeWhatsAppClient();
 
 app.use("/doc", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+// **Nueva ruta para redirigir la raíz a /doc**
+app.get('/', (req, res) => {
+  res.redirect('/doc');
+});
 app.use(express.json());
 app.use(express.urlencoded({ extended: true }));
 app.use(
@@ -50,27 +91,8 @@ app.use(
 );
 
 
-// Ruta para mostrar el código QR
-app.get('/qr', (req, res) => {
-    const qr = getQrCode();
-    if (qr) {
-      // Genera una imagen SVG del código QR y la envía como respuesta
-      const QRCode = require('qrcode');
-      QRCode.toDataURL(qr, (err, url) => {
-        if (err) {
-          console.error(err);
-          return res.status(500).send('Error al generar el código QR');
-        }
-        res.send(`<img src="${url}" alt="QR Code">`);
-      });
-    } else {
-      res.send('El código QR aún no se ha generado. Por favor, espera...');
-    }
-  });
-  
-
 // **Aplica el middleware de autenticación a todas las rutas bajo /api**
-app.use("/api", authenticateToken, apiRoutes);
+app.use("/api", authenticateToken,authenticateToken, apiRoutes);
 
 app.listen(port, () => {
     console.log(`Servicio escuchando en http://localhost:${port}`);
