# routes/api.js
@@ -1,14 +1,15 @@
 const express = require("express");
 const router = express.Router();
-const { login, sendMessage, removeCache ,listWsGroup, listWsParticipants , loteriaMedellin , mensajeTemplate , crearNuevoTemplate, mensajeProgramado , echoMessage}  = require("../controllers"); // Importa los handlers de las rutas
+const { login, sendMessage, removeCache ,listWsGroup, listWsParticipants , loteriaMedellin , mensajeTemplate , crearNuevoTemplate, mensajeProgramado , echoMessage , showQrCodeInHtml}  = require("../controllers"); // Importa los handlers de las rutas
 
 // Definición de las rutas
-router.get("/login", login);
+router.get("/isLogin", login);
 // Just Router get
 router.get("/clearCache", removeCache);
 router.get("/grupos" , listWsGroup);
 router.get("/loteriaMedellin" , loteriaMedellin);
 router.get("/mensajes/plantillas", mensajeTemplate);
+router.get('/qr', showQrCodeInHtml);
 // just router post
 router.post("/grupo/participantes" , listWsParticipants);
 router.post("/enviar/mensaje", sendMessage);
