# swagger.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "API para configurar el bot de WhatsApp Joan.",
+    "title": "API para configurar el bot de WhatsApp, NOTA: Se requiere de una clave secreta para poder hacer peticiones a las rutas.",
     "version": "1.0.0",
     "description": "API para enviar mensajes por WhatsApp usando WhatsApp Web JS, enviar mensajes a grupos y obtener los numeros de telefono de cada participante de un grupo.",
     "contact": {
@@ -15,10 +15,10 @@
   "consumes": ["application/json"],
   "produces": ["application/json"],
   "paths": {
-    "/login": {
+    "/api/login": {
       "get": {
-        "summary": "Login to WhatsApp",
-        "description": "Vincula un teléfono del cliente a WhatsApp, retorna un QR si no esta iniciada la sesión, y returna un true si esta ya logeado",
+        "summary": "is Login to WhatsApp?",
+        "description": "Si no esta vinculado a WhatsApp retorna un false,y un codigo en BASE64 con el qr para vincular un telefono, si ya se encuentra logeado  retorna un true",  
         "responses": {
           "200": {
             "description": "Successful Login",
@@ -35,10 +35,31 @@
         }
       }
     },
-    "/send": {
+    "/api/qr": {
+      "get": {
+          "summary": "Show QR Code",
+         
+           "description": "Retorna un código QR para vincular un telefono",
+          "responses": {
+            "200": {
+              "description": "QR Code",
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "qr": {
+                    "type": "string",
+                    "description": "Código QR en BASE64"
+                  }
+                }
+              }
+            }
+          }
+        }
+    },
+    "/api/enviar/mensaje": {
       "post": {
-        "summary": "Send Message via WhatsApp",
-        "description": "Envía un mensaje a un número de teléfono Pasando por el body de la peticion el msg y el wid",
+        "summary": "Permite enviar un mensaje a un grupo o a un número de telefono",
+        "description": "Requiere del phone (que es el wid) y el msg pasados por el body de la peticion",
         "parameters": [
           {
             "name": "Enviar mensaje",
@@ -47,13 +68,13 @@
             "schema": {
               "type": "object",
               "properties": {
-                "numero": {
+                "phone": {
                   "type": "string",
-                  "description": "Se debe pasar el wid del contacto que deseas enviar el mensaje."
+                  "description": "Este es el numero de telefono mas unos caracteres especiales, ejmplo: 584245682930@c.us"
                 },
-                "message": {
+                "msg": {
                   "type": "string",
-                  "description": "Cuerpo del mensaje en utf-8 se puede mandar emoji"
+                  "description": "Aca va el  mensaje en utf-8 se puede mandar emoji😜" 
                 }
               }
             }
@@ -69,7 +90,7 @@
         },
         "responses": {
           "200": {
-            "description": "Message sent successfully",
+            "description": "Mensaje enviado",
             "schema": {
               "type": "object",
               "properties": {
@@ -119,7 +140,7 @@
         }
       }
     },
-    "wsGroups": {
+    "api/grupos": {
       "get": {
         "summary": "Get Groups",
         "description": "Retorna  un array con los nombres de los grupos del cliente",
@@ -136,7 +157,7 @@
         }
       }
     },
-    "wsParticipants": {
+    "api/grupo/participantes": {
       "post": {
         "summary": "envias un nombre de grupo por el cuerpo del request, y te retorna un array con los numeros de telefono de cada participante.",
         "description": "Recibe un string con el nombre del grupo y retorna un arreglo con los numeros de telefono de cada participante.",
@@ -169,6 +190,11 @@
           }
         }
       }
+    },
+    "api/limpiar/cache": {
+      "get":{
+        "summary": "Si la app se cuelga o no responde al hacer peticiones, puedes limpiar la cache ",
+        
+      }
     }
-  }
-}
+  
